add sample visualization with d3.js

--- a/index.haml
+++ b/index.haml
@@ -55,6 +55,10 @@
 								Code
 
 				.span10
+					%svg
+						%circle{ :cx => '100', :cy => '60', :r => '15'}
+						%circle{ :cx => '250', :cy => '180', :r => '15'}
+						%circle{ :cx => '500', :cy => '120', :r => '15'}
 					%h2
 						Get Resource
 					%form.form-horizontal
@@ -113,3 +117,4 @@
 		%script{ :src => 'js/bootstrap/bootstrap.min.js'}
 		%script{ :src => 'js/libs/underscore/underscore.js'}
 		%script{ :src => 'js/libs/backbone/backbone.js'}
+		%script{ :src => 'js/d3.v3/d3.v3.min.js'}
