--- a/index.haml
+++ b/index.haml
@@ -55,7 +55,7 @@
 								Code
 
 				.span10
-					%svg
+					%svg{ :height => '250', :width => '600'}
 						%circle{ :cx => '100', :cy => '60', :r => '12'}
 						%circle{ :cx => '250', :cy => '180', :r => '12'}
 						%circle{ :cx => '500', :cy => '120', :r => '12'}
