add svg attributes dynamically

--- a/index.haml
+++ b/index.haml
@@ -55,13 +55,13 @@
 								Code
 
 				.span10
-					%svg{ :height => '250', :width => '600'}
-						%circle{ :cx => '100', :cy => '60', :r => '12'}
-						%circle{ :cx => '250', :cy => '180', :r => '12'}
-						%circle{ :cx => '500', :cy => '120', :r => '12'}
-						%circle{ :cx => '140', :cy => '80', :r => '12'}
-						%circle{ :cx => '200', :cy => '150', :r => '12'}
-						%circle{ :cx => '430', :cy => '160', :r => '12'}
+					%svg
+						%circle
+						%circle
+						%circle
+						%circle
+						%circle
+						%circle
 
 					%h2
 						Get Resource
