add button run to display d3 objects

--- a/index.haml
+++ b/index.haml
@@ -59,7 +59,7 @@
 						SVG Circles
 					%span.help-block
 						transitions duration and direction are random
-					%button.btn.btn-info.run
+					%button.btn.btn-success.runCircles
 						Run
 
 					%svg.circles
@@ -94,6 +94,8 @@
 					%hr.bs-docs-separator
 					%h2#tree
 						Bar Chart
+					%button.btn.btn-success.runBarChart
+						Run
 					%svg.barChart
 
 					%hr.bs-docs-separator
