--- a/index.haml
+++ b/index.haml
@@ -2,6 +2,7 @@
 %html
 	%head
 		%title
+		%meta{ :name => 'viewport', :content => 'width=device-width, initial-scale=1.0'}
 		%link{ :href => 'css/design.css', :rel => 'stylesheet'}
 		%link{ :href => 'css/bootstrap/bootstrap.min.css', :rel => 'stylesheet'}
 		%link{ :href => 'css/bootstrap/bootstrap-responsive.min.css', :rel => 'stylesheet'}
